<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FAF3E0"
    tools:context=".PriceCalculatorActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_calculator"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#4E342E"
        android:layout_marginBottom="20dp" />


    <EditText
        android:id="@+id/materialCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/material_cost"
        android:inputType="numberDecimal"
        android:autofillHints=""
        android:padding="12dp"
        android:backgroundTint="#8D6E63" />
    <EditText
        android:id="@+id/laborCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/labor_cost"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#8D6E63" />

    <Button
        android:id="@+id/calculateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_price"
        android:layout_marginTop="20dp"
        android:backgroundTint="#6D4C41"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_price"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#3E2723"
        android:layout_marginTop="30dp" />

</LinearLayout>